--- a/lazer_blast/requirements.txt
+++ b/lazer_blast/requirements.txt
@@ -1,11 +1,24 @@
 astroid==1.4.9
+decorator==4.0.11
 flake8==3.2.1
+ipdb==0.10.2
+ipython==5.1.0
+ipython-genutils==0.1.0
 isort==4.2.5
+-e git+https://github.com/terrencepreilly/CPS410@b292a8c76f567d8a964cf73a056f94d33c9aa02c#egg=lazer_blast&subdirectory=lazer_blast
 lazy-object-proxy==1.2.2
 mccabe==0.5.3
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.9
+ptyprocess==0.5.1
 pycodestyle==2.2.0
 pyflakes==1.3.0
 pygame==1.9.3
+Pygments==2.2.0
 pylint==1.6.5
+simplegeneric==0.8.1
 six==1.10.0
+traitlets==4.3.1
+wcwidth==0.1.7
 wrapt==1.10.8
